# MakeUpAI

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1feda51c0884_remove_json_ai_responses.py  52c52344bbdf_remove_json_ai_responses.py  56620bb31d91_test.py  83b1ba50299f_test.py  ac417602b2c1_test.py
api_v1/ai/: crud.py  prompt.py  schemas.py  utils.py  views.py
api_v1/pair/: crud.py  schemas.py  views.py
api_v1/test/: crud.py  schemas.py  views.py
api_v1/user/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  analyze.py  pair.py  test_session.py  user.py
