[project]
name = "makeupai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "black>=26.1.0",
    "fastapi>=0.129.0",
    "greenlet>=3.3.1",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
